--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(rgba(0, 32, 14, 0.8),rgba(0,0,0,0.8));
+  background-image: linear-gradient( black,rgb(107, 46, 58),pink);
 }
